// App Name
const String appName = "Git Sync";

// Routes
const String settings_main = "/settings_main";
const String clone_repo_main = "/clone_repo_main";
const String global_settings_main = "/global_settings_main";

...
