...
    

    "@@x-ACCESSIBILITY_LABELS": "",
    "cloneProgressLabel": "clone progress",
    "forcePushProgressLabel": "force push progress",
    "forcePullProgressLabel": "force pull progress",
    "moreSyncOptionsLabel": "more sync options",
    "repositorySettingsLabel": "repository settings",
    "addBranchLabel": "add branch",
    "deselectDirLabel": "deselect directory",
    "selectDirLabel": "select directory",
    "syncMessagesLabel": "disable/enable sync messages",
    "backLabel": "back",
    "authDropdownLabel": "auth dropdown",


    "@@x-PAID_FEATURES": "",
    "premiumDialogTitle": "Unlock Premium",
    "premiumDialogMessage": "This feature is part of the premium experience.\nMake a one-time payment of %s to unlock it and enjoy more powerful tools.\n\nPremium Features:\n • Multi-repo support\n\nAlternatively, connect your GitHub account to check if you're an eligible GitHub Sponsor.",
...
    "applicationNotSet": "Select App(s)",
    "selectApplication": "Select application(s)",
    "multipleApplicationSelected": "Selected (%s)",
    "saveApplication": "Save",
    "syncOnAppClosed": "Sync on app(s) closed",
    "syncOnAppOpened": "Sync on app(s) opened",
    "scheduledSyncSettings": "Scheduled Sync Settings",
    "sync": "Sync",
    "dontSync": "Don't Sync",
    "iosDefaultSyncRate": "when iOS allows",
    "aboutEvery": "~every",
    "enhancedScheduledSync": "Enhanced Scheduled Sync",
    "enhancedScheduledSyncMsg1": "Unlike the basic sync, this feature uses advanced background updates to deliver fresh data more frequently and reliably.",
    "enhancedScheduledSyncMsg2": "Sync your repositories in the background as often as a sync per minute, even when the app is closed!\n\nEffortless, continuous updates mean your repos are always ready when you are.",
    "enhancedScheduledSyncNote": "Note: Background syncing may be affected by battery saver and Do Not Disturb modes.",
    "quickSyncSettings": "Quick Sync Settings",
    "tileSyncSettings": "Tile Sync Settings",
    "otherSyncSettings": "Other Sync Settings",
    "useForTileSync": "Use for Sync Tile ",
    "useForTileManualSync": "Use for Manual Sync Tile",
    "useForShortcutSync": "Use for Sync Shortcut",
    "useForShortcutManualSync": "Use for Manual Sync Shortcut",
    "useForWidgetSync": "Use for Sync Widget",
...
