appId: com.viscouspot.gitsync
---
- runFlow:
    when:
      platform: iOS
    commands:
      - launchApp:
          appId: com.viscouspot.git-sync
- runFlow:
    when:
      platform: Android
    commands:
      - launchApp:
          appId: com.viscouspot.gitsync
- assertVisible: "Git Sync"
- runFlow:
    when:
      notVisible: "DON'T SYNC"
    commands:
      - tapOn: "Scheduled Sync Settings"
- scroll
- scroll
- takeScreenshot: generate_screenshots/raw/screenshot_scheduled_sync_settings
